# onebrc

./: .gitignore  Cargo.toml
.cargo/: config.toml
data/: measurements_small.txt  test_small.csv
src/: attempt1.rs  attempt10.rs  attempt2.rs  attempt3.rs  attempt4.rs  attempt5.rs  attempt6.rs  attempt7.rs  attempt8.rs  attempt9.rs  main.rs  utils.rs
