[package]
name = "onebrc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.11.0"
rustc-hash = { version = "1.1.0", features = [] }
gxhash = "3.1.1"
memmap2 = "0.9.4"


[profile.dev]
overflow-checks = false

[profile.release]
codegen-units = 1
lto = "fat"
#incremental = true
#debug = true
#debuginfo-level = 1
